--- a/Models.ipynb
+++ b/Models.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,6 @@
        "      <th>flare</th>\n",
        "      <th>score</th>\n",
        "      <th>id</th>\n",
-       "      <th>created</th>\n",
        "      <th>author</th>\n",
        "      <th>body</th>\n",
        "      <th>timestamp</th>\n",
@@ -398,7 +397,6 @@
        "      <td>AskIndia</td>\n",
        "      <td>344</td>\n",
        "      <td>fqqdsg</td>\n",
-       "      <td>1.585451e+09</td>\n",
        "      <td>IAmMohit</td>\n",
        "      <td>###[Covid-19 Fundraisers &amp; Donation Links](htt...</td>\n",
        "      <td>2020-03-29 08:40:33</td>\n",
@@ -411,7 +409,6 @@
        "      <td>AskIndia</td>\n",
        "      <td>214</td>\n",
        "      <td>fo0xj9</td>\n",
-       "      <td>1.585063e+09</td>\n",
        "      <td>IAmMohit</td>\n",
        "      <td>This post will serve as a wiki for multi-lingu...</td>\n",
        "      <td>2020-03-24 20:53:48</td>\n",
@@ -424,7 +421,6 @@
        "      <td>AskIndia</td>\n",
        "      <td>8288</td>\n",
        "      <td>fyyx8c</td>\n",
-       "      <td>1.586618e+09</td>\n",
        "      <td>sinsandtonic</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2020-04-11 20:47:54</td>\n",
@@ -437,7 +433,6 @@
        "      <td>AskIndia</td>\n",
        "      <td>519</td>\n",
        "      <td>fz6vdl</td>\n",
-       "      <td>1.586646e+09</td>\n",
        "      <td>godzillaweener</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2020-04-12 04:25:31</td>\n",
@@ -450,7 +445,6 @@
        "      <td>AskIndia</td>\n",
        "      <td>666</td>\n",
        "      <td>fz59yf</td>\n",
-       "      <td>1.586641e+09</td>\n",
        "      <td>aviakki1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2020-04-12 03:00:18</td>\n",
@@ -474,12 +468,12 @@
        "3                    https://i.imgur.com/F0UHNcw.jpg         37  AskIndia   \n",
        "4  https://twitter.com/PTI_News/status/1248965677...         47  AskIndia   \n",
        "\n",
-       "   score      id       created          author  \\\n",
-       "0    344  fqqdsg  1.585451e+09        IAmMohit   \n",
-       "1    214  fo0xj9  1.585063e+09        IAmMohit   \n",
-       "2   8288  fyyx8c  1.586618e+09    sinsandtonic   \n",
-       "3    519  fz6vdl  1.586646e+09  godzillaweener   \n",
-       "4    666  fz59yf  1.586641e+09        aviakki1   \n",
+       "   score      id          author  \\\n",
+       "0    344  fqqdsg        IAmMohit   \n",
+       "1    214  fo0xj9        IAmMohit   \n",
+       "2   8288  fyyx8c    sinsandtonic   \n",
+       "3    519  fz6vdl  godzillaweener   \n",
+       "4    666  fz59yf        aviakki1   \n",
        "\n",
        "                                                body            timestamp  \n",
        "0  ###[Covid-19 Fundraisers & Donation Links](htt...  2020-03-29 08:40:33  \n",
@@ -489,7 +483,7 @@
        "4                                                NaN  2020-04-12 03:00:18  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,6 +493,7 @@
     "\n",
     "\n",
     "rindi = pd.read_csv('rindia.csv')\n",
+    "rindi = rindi.drop(['created'], axis=1)\n",
     "rindi.head()"
    ]
   },
