--- a/Models.ipynb
+++ b/Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,13 @@
       "[nltk_data]    | Downloading package reuters to\n",
       "[nltk_data]    |     /home/pranay/nltk_data...\n",
       "[nltk_data]    |   Package reuters is already up-to-date!\n",
-      "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n",
+      "[nltk_data]    | Downloading package rte to /home/pranay/nltk_data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "[nltk_data]    |   Package rte is already up-to-date!\n",
       "[nltk_data]    | Downloading package semcor to\n",
       "[nltk_data]    |     /home/pranay/nltk_data...\n",
@@ -353,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +489,7 @@
        "4                                                NaN  2020-04-12 03:00:18  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,17 +582,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def train_test(X,y):\n",
-    " \n",
-    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state = 42)\n",
-    "\n",
-    "  print(\"Results of Naive Bayes Classifier\")\n",
-    "  nb_classifier(X_train, X_test, y_train, y_test)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
